tests/baselines/reference/parserErrorRecovery_Block3.errors.txt
==== tests/cases/compiler/parserErrorRecovery_Block3.ts (3 errors) ====
    class C  {
        private a(): boolean {
                     ~~~~~~~
!!! parserErrorRecovery_Block3.ts(2,18): error TS2131: Function declared a non-void return type, but has no return expression.
    
        private b(): boolean {
        ~~~~~~~
!!! parserErrorRecovery_Block3.ts(4,5): error TS1008: Unexpected token; 'statement' expected.
                     ~~~~~~~
!!! parserErrorRecovery_Block3.ts(4,18): error TS2131: Function declared a non-void return type, but has no return expression.
        }
    }